--- a/_posts/2017-05-19-tdd.md
+++ b/_posts/2017-05-19-tdd.md
@@ -9,9 +9,10 @@ tags:
 ---
 
 During a recent endeavor of adding code coverage to an existing test framework
-I discovered that we had several unit tests that were never run. This lack of
+I discovered that we had areas in our unit tests that were never run. This lack of
 evaluated code was a result of writing the unit tests after the code had been
-written instead of having the unit tests drive the application code.
+written instead of having the unit tests drive the application code along with
+conditionals in our unit test helpers.
 
 This is something I had not thought of before and I believe should be a good
 reminder to always write your unit tests first and have them drive the
